✨ Add answers to Problem 2 & 3.

--- a/Group_HW01/article.tex
+++ b/Group_HW01/article.tex
@@ -69,5 +69,20 @@ It is a function as for every input $x \in \mathbb{R}$, there are only one and o
 
 It is a function as for every input $x \in \mathbb{R}$, there are only one and only one output value $x^2$. This function is \textit{surjective} as for $\{x_0, x_1\} \in \mathbb{R}$, let $x_0 = -x_1$, we have $f(x_0) = f(x_1) = (x_0)^2$. This suggests a many-to-one relationship and therefore a surjective function.
 
+\section*{Problem 2}
+
+We have $f \circ g(x) = f(g(x)) = \sin(x^2)$ and  $g \circ f(x) = g(f(x)) = (\sin x)^2$. It is clear they are both defined, but not equal.
+
+\section*{Problem 3}
+
+To permute the elements among to lists, we have $A = \{0, 1\}$ and $B = \{0, \pm1, \pm2\}$. Thus:
+
+\begin{itemize}
+    \item $A \cup B = \{0, \pm1, \pm2\} = B$
+    \item $A \cap B = \{0, 1\} = A$
+    \item $A \backslash B = \{x \mid x \in A, x \not\in B\} = \emptyset$
+\end{itemize}
+
+\noindent As every element of $A$ is an element of $B$, we have $A \subset B$.
 \end{document}
 
