🐛 Fix mistake on P3 regarding elements of set B.

--- a/Group_HW01/article.tex
+++ b/Group_HW01/article.tex
@@ -75,10 +75,10 @@ We have $f \circ g(x) = f(g(x)) = \sin(x^2)$ and  $g \circ f(x) = g(f(x)) = (\si
 
 \section*{Problem 3}
 
-To permute the elements among to lists, we have $A = \{0, 1\}$ and $B = \{0, \pm1, \pm2\}$. Thus:
+To permute the elements of sets, we have $A = \{0, 1\}$ and $B = \{0, \pm1, \pm2, -3, -4, -5, ...\}$. Thus:
 
 \begin{itemize}
-    \item $A \cup B = \{0, \pm1, \pm2\} = B$
+    \item $A \cup B = \{0, \pm1, \pm2, -3, -4, -5, ...\} = B$
     \item $A \cap B = \{0, 1\} = A$
     \item $A \backslash B = \{x \mid x \in A, x \not\in B\} = \emptyset$
 \end{itemize}
