🐛 Fix mistake on P1(3) as the function is not surjective.

--- a/Group_HW01/article.tex
+++ b/Group_HW01/article.tex
@@ -67,7 +67,7 @@ It is a function as for every input $x \in \mathbb{R}$, there are only one and o
 
 \subsection*{$g: \mathbb{R} \to \mathbb{R}$, $g(x) = x^2$}
 
-It is a function as for every input $x \in \mathbb{R}$, there are only one and only one output value $x^2$. This function is \textit{surjective} as for $\{x_0, x_1\} \in \mathbb{R}$, let $x_0 = -x_1$, we have $f(x_0) = f(x_1) = (x_0)^2$. This suggests a many-to-one relationship and therefore a surjective function.
+It is a function as for every input $x \in \mathbb{R}$, there are only one and only one output value $x^2$. This function is not \textit{injective} as for $\{x_0, x_1\} \in \mathbb{R}$, let $x_0 = -x_1$, we have $f(x_0) = f(x_1) = (x_0)^2$; this suggests a many-to-one relationship and therefore not an injective function. This function is also not \textit{surjective} as we have $\mathbb{R}$ being the codomain of the function, but any $\mathbb{Z^-}$ among the codomain can't be matched to any domain in  $\mathbb{R}$. So it is just a general function.
 
 \section*{Problem 2}
 
