💄 Change author list format.

--- a/Group_HW01/article.tex
+++ b/Group_HW01/article.tex
@@ -42,9 +42,9 @@
 \title{\textbf{MATH 307: Group Homework 1}}
 
 
-\author{Shaochen (Henry) ZHONG, \ilc{sxz517} \\
-Zhitao (Robert) CHEN, \ilc{zxc325} \\
-John MAYS, \ilc{jkm100}}
+\author{\textit{Group 8}\\
+Shaochen (Henry) ZHONG, Zhitao (Robert) CHEN, John MAYS, Huaijin XIN\\ \ilc{\{sxz517, zxc325, jkm100, hxx200\}@case.edu}}
+
 \date{Due and submitted on 02/05/2021 \\ Spring 2021, Dr. Guo}
 \maketitle
 
