🐛 Fix Individual HW03 P1 mentions of r.

--- a/Individual_HW03/article.tex
+++ b/Individual_HW03/article.tex
@@ -51,7 +51,7 @@ Shaochen (Henry) ZHONG, \ilc{sxz517@case.edu}}
 \subsection*{Problem 1}
 \textit{Compute all 4th roots of $i$. Express them in polar form and plot them in the complex plane.}\newline
 
-\noindent Known that $i = e ^{i \theta} = e ^{i \frac{\pi}{2}}$, we have its 4th roots being $e^{i (\frac{\theta}{k} + \frac{2j\pi}{k})}$ for $k = 4$ and $j = 0, 1, 2, 3$. So the 4th roots are $e^{i (\frac{\pi}{8} + \frac{j \pi}{2})}$ for $j = 0, 1, 2, 3$. Here's the plotting of these roots where each root is marked in red:
+\noindent Known that $i = e ^{i \theta} = e ^{i \frac{\pi}{2}}$, we have its 4th roots being $e^{i (\frac{\theta}{k} + \frac{2j\pi}{k})}$ for $k = 4$ and $j = 0, 1, 2, 3$. So the 4th roots are $e^{i (\frac{\pi}{8} + \frac{j \pi}{2})}$ for $j = 0, 1, 2, 3$ and $r^4 = 1 \Longrightarrow r = \pm 1$. Here's the plotting of these roots where each root is marked in red:
 
 
 \begin{figure}[H]
