🐛 Fix matrix dimension typo in IHW4P1&2.

--- a/Individual_HW04/article.tex
+++ b/Individual_HW04/article.tex
@@ -50,13 +50,13 @@
 \subsection*{Problem 1}
 \textit{Textbook page 40, problem 1.}\newline
 
-For $W$ to be a vector space, we must have $(u + v) \in W$ for $u, v \in W$. However for $u = v = \begin{bmatrix} 2\\ 2\\ 2\\ \end{bmatrix}$, we have $(u + v) = \begin{bmatrix} 4\\ 4\\ 4\\ \end{bmatrix}$; which is $\not\in W$ as $|x_j| \not< 3$ for $i \leq j \leq 4$. Thus, we may conclude that $W$ is not a vector space.
+For $W$ to be a vector space, we must have $(u + v) \in W$ for $u, v \in W$. However for $u = v = \begin{bmatrix} 2\\ 2\\ 2\\ 2\\\end{bmatrix}$, we have $(u + v) = \begin{bmatrix} 4\\ 4\\ 4\\ 4\\ \end{bmatrix}$; which is $\not\in W$ as $|x_j| \not< 3$ for $i \leq j \leq 4$. Thus, we may conclude that $W$ is not a vector space.
 
 
 \subsection*{Problem 2}
 \textit{Textbook page 40, problem 5.}\newline
 
-For $W \in \mathbb{R}^4: x + 20y - 12z - 1 = 0$ for $x, y, z$ as elment of $\mathbb{R}^4$ to be a vector space, we must have a zero vector $0$ where $0 + u = u$ for $u \in W$. In this case the zero vector is $\begin{bmatrix} 4\\ 4\\ 4\\ 4\\ \end{bmatrix}$ but it is not in $W$. Thus, we may conclude that $W$ is not a vector space.
+For $W \in \mathbb{R}^3: x + 20y - 12z - 1 = 0$ for $x, y, z$ as elements of $W$ to be a vector space, we must have a zero vector $0$ where $0 + u = u$ for $u \in W$. In this case the zero vector is $\begin{bmatrix} 0\\ 0\\ 0\\ \end{bmatrix}$ but it is $\not \in W$ as $0 + 20(0) - 12(0) - 1 \neq 0$. Thus, we may conclude that $W$ is not a vector space.
 
 
 \subsection*{Problem 3}
