🐛 Fix to add proof on 0 \in F^{n \times n}.

--- a/Individual_HW04/article.tex
+++ b/Individual_HW04/article.tex
@@ -81,6 +81,7 @@ For matrix $M, N, U \in A \in F^{n \times n}$, we know that the $tr(m) = tr(n) =
     \item $0 \in A$ where $0 + M = M$. We know this is true as as each element on $ij$ index in LHS is $M_{ij}$ which is equals to the $ij$-indexed element in RHS.
     \item $\forall M \in A$, we have $M + -M = 0$ where the element on $ij$ index in $-M$ is simply $-1 \cdot M_{ij}$, so we must have $M_{ij} + (-M_{ij}) = 0$ and therefore $M + -M = 0$.
     \item $\lambda M \in A$ as the element on $ij$ index in $\lambda M$ is simply $\lambda \cdot M_{ij}$ which is still in $\mathbb{R}$, we have $M \in A \in F^{n \times n}$.
+    \item $0 \in  F^{n \times n}$ where $0 + M = M$. We know this is true as as each element on $ij$ index in LHS is $M_{ij}$ which is equals to the $ij$-indexed element in RHS. We also know that a $n \times n$ matrix filled with $0$s is $\in  F^{n \times n}$.
     \item $\lambda (M + N) = \lambda M + \lambda N$ as each element on $ij$ index in LHS is $\lambda(M_{ij} + N_{ij}) = \lambda M_{ij} + \lambda N_{ij}$, which is equals to the $ij$-indexed element in RHS.
     \item $(\lambda + \mu) M = \lambda M + \mu M$ as each element on $ij$ index in LHS is $(\lambda + \mu) M_{ij} =\lambda M_{ij} + \mu M_{ij}$, which is equals to the $ij$-indexed element in RHS.
     \item $\lambda (\mu M) = (\lambda \mu) M)$ as each element on $ij$ index in LHS is $\lambda \cdot \mu \cdot  M_{ij}$ which is equals to the $ij$-indexed element in RHS.
