--- a/Individual_HW04/article.tex
+++ b/Individual_HW04/article.tex
@@ -78,14 +78,14 @@ For matrices $M, N, U \in F^{n \times n}$, we know that $tr(M) = tr(N) = tr(U) =
         \vdots & \vdots & \ddots & \vdots \\
         M_{n1} + N_{n1}+U_{n1} & M_{n2} + N_{n2}+U_{n2} & \cdots & M_{nn} + N_{nn}+U_{nn} \\
     \end{bmatrix}$
-    \item $0 \in  F^{n \times n}$ where $0 + M = M$. We know this is true as as each element on $ij$ index in LHS is $M_{ij}$ which is equals to the $ij$-indexed element in RHS. We also know that a $n \times n$ matrix filled with $0$s is $\in  F^{n \times n}$.
+    \item $0 \in  F^{n \times n}$ where $0 + M = M$. We know this is true as as the element on $ij$ index on LHS is $M_{ij}$ which is equals to the $ij$-indexed element on RHS. We also know that a $n \times n$ matrix filled with $0$s is $\in  F^{n \times n}$.
     \item $\forall M \in F^{n \times n}$, we have $M + -M = 0$ where the element on $ij$ index in $-M$ is simply $-1 \cdot M_{ij}$, so we must have $M_{ij} + (-M_{ij}) = 0$ and therefore $M + -M = 0$.
     \item $\lambda M \in F^{n \times n}$ as the element on $ij$ index in $\lambda M$ is simply $\lambda \cdot M_{ij}$ which is still in $F$, we then have $\lambda M  \in F^{n \times n}$.
-    \item $\lambda (M + N) = \lambda M + \lambda N$ as each element on $ij$ index in LHS is $\lambda(M_{ij} + N_{ij}) = \lambda M_{ij} + \lambda N_{ij}$, which is equals to the $ij$-indexed element in RHS.
-    \item $(\lambda + \mu) M = \lambda M + \mu M$ as each element on $ij$ index in LHS is $(\lambda + \mu) M_{ij} =\lambda M_{ij} + \mu M_{ij}$, which is equals to the $ij$-indexed element in RHS.
-    \item $\lambda (\mu M) = (\lambda \mu) M$ as each element on $ij$ index in LHS is $\lambda \cdot \mu \cdot  M_{ij}$ which is equals to the $ij$-indexed element in RHS.
-    \item $1 \cdot M = M$  as each element on $ij$ index in LHS is $1 \cdot M_{ij}$ which is equals to the $ij$-indexed element in RHS.
-\end{enumerate}\newline
+    \item $\lambda (M + N) = \lambda M + \lambda N$ as the element on $ij$ index on LHS is $\lambda(M_{ij} + N_{ij}) = \lambda M_{ij} + \lambda N_{ij}$, which is equals to the $ij$-indexed element on RHS.
+    \item $(\lambda + \mu) M = \lambda M + \mu M$ as the element on $ij$ index on LHS is $(\lambda + \mu) M_{ij} =\lambda M_{ij} + \mu M_{ij}$, which is equals to the $ij$-indexed element on RHS.
+    \item $\lambda (\mu M) = (\lambda \mu) M$ as the element on $ij$ index on LHS is $\lambda \cdot \mu \cdot  M_{ij}$ which is equals to the $ij$-indexed element on RHS.
+    \item $1 \cdot M = M$  as the element on $ij$ index on LHS is $1 \cdot M_{ij}$ which is equals to the $ij$-indexed element on RHS.
+\end{enumerate}
 
 As all ten axioms are proven to be valid, we may conclude that $F^{n \times n}$ is vector field over $F$.
 
