⚙️ Add matrix formatting shortcut.

--- a/Group_HW03/article.tex
+++ b/Group_HW03/article.tex
@@ -33,6 +33,8 @@
 
 \providecommand{\myceil}[1]{\left \lceil #1 \right \rceil }
 \providecommand{\myfloor}[1]{\left \lfloor #1 \right \rfloor }
+\providecommand{\qbm}[1]{\begin{bmatrix} #1 \end{bmatrix}}
+\providecommand{\qpm}[1]{\begin{pmatrix} #1 \end{pmatrix}}
 
 
 \begin{document}
