🐛 Fix typo on writing R instead of R^2.

--- a/Group_HW03/article.tex
+++ b/Group_HW03/article.tex
@@ -61,6 +61,7 @@ For $u = \begin{pmatrix} 1 \\ 2\end{pmatrix}$, $v = \begin{pmatrix} 1 \\ 1\end{p
 \end{align*}
 
 Thus, we have $span(u, v, w) \subset \mathbb{R}$.
+Thus, we have $span(u, v, w) \subset \mathbb{R}^2$.
 
 For any arbitrary vector $d \in span(u, v, w)$, we have:
 
