--- a/Group_HW03/article.tex
+++ b/Group_HW03/article.tex
@@ -60,7 +60,6 @@ For $u = \begin{pmatrix} 1 \\ 2\end{pmatrix}$, $v = \begin{pmatrix} 1 \\ 1\end{p
     &= y \begin{pmatrix} 1 \\ 1\end{pmatrix} + (y-x)\begin{pmatrix} -1 \\ 0\end{pmatrix}
 \end{align*}
 
-Thus, we have $span(u, v, w) \subset \mathbb{R}$.
 Thus, we have $span(u, v, w) \subset \mathbb{R}^2$.
 
 For any arbitrary vector $d \in span(u, v, w)$, we have:
@@ -73,7 +72,106 @@ For any arbitrary vector $d \in span(u, v, w)$, we have:
     \end{pmatrix}
 \end{align*}
 
-where $d \in \mathbb{R}^2$, thus we have $\mathbb{R} \subset span(u, v, w)$ and therefore $\mathbb{R} = span(u, v, w)$
+where $d \in \mathbb{R}^2$, thus we have $\mathbb{R}^2 \subset span(u, v, w)$ and therefore $\mathbb{R}^2 = span(u, v, w)$
+
+\section*{Problem 2}
+
+$\forall p \in P^4 = a_0 + a_1 x + a_2 x^2 + a_3 x^3 + a_4 x^4$ for $a \in \mathbb{R}$, we will have a $span(-x^4, x^3, -x^2, x, -1) \subset P^4$.
+
+\begin{equation*}
+    -a_0 \cdot (-1) + a_1 x - a_2 (-x^2) + a_3 x^3 - a_4 (-x^4)
+\end{equation*}
+
+which is equals to such $p$, which implies $span(-x^4, x^3, -x^2, x, -1) \subset P^4$.\newline
+
+\noindent $\forall q \in span(-x^4, x^3, -x^2, x, -1)$, we may express them as $q = b_4(-x^4) + b_3(x^3) + b_2(-x^2) + b_1(x) + (b_0)(- x^0)$ which is clearly in $\in P^4$, so we also have $P^4 \subset span(-x^4, x^3, -x^2, x, -1)$ and therefore $P^4 = span(-x^4, x^3, -x^2, x, -1)$.
+
+\section*{Problem 3}
+
+\subsection*{(a)}
+
+No, it is linearly dependent as we may have:
+
+% \begin{align*}
+%     0 &= 1 \begin{bmatrix} 1 \\ 1 + i\end{bmatrix} + (-\frac{1}{2} - \frac{1}{2}i) \begin{bmatrix} 1-i \\ 2\end{bmatrix}
+% \end{align*}
+
+\begin{align*}
+    0 &= \lambda_1 \qbm{1 \\ 1+i} + \lambda_2 \qbm{1-i \\ 2} \\
+    &\begin{cases}
+        \lambda_1 + \lambda_2 - \lambda_2 i = 0 \\
+        \lambda_1 + \lambda_1 i - 2\lambda_2 = 0
+    \end{cases} \\
+    \Longrightarrow& \begin{cases}
+            \lambda_1 = -3 + i \\
+            \lambda_2 = 2 + i
+        \end{cases}
+\end{align*}
+
+for $\lambda_1, \lambda_2 \in \mathbb{C}$, where the coefficients are not zeros.
+
+\subsection*{(b)}
+
+No, it is linearly dependent as we may have:
+
+
+\begin{align*}
+    0 &= \lambda_1 \qbm{1\\1\\2} + \lambda_2 \qbm{2 \\1 \\3} + \lambda_3 \qbm{1 \\ 0 \\1} \\
+    \Longrightarrow& \lambda_1 = -\lambda_2 = \lambda_3
+\end{align*}
+
+
+for $\lambda_1, \lambda_2, \lambda_3 \in \mathbb{C}$, where the coefficients are not zeros.
+
+\subsection*{(c)}
+
+No, it is linearly dependent as we may have:
+
+
+\begin{align*}
+    0 &= \lambda_1 \qbm{ -1 \\ 2 \\ 0} + \lambda_2 \qbm{ 2 \\ -3 \\ 1 } + \lambda_3 \qbm{ 0 \\ 4 \\ 5 } + \lambda_4 \qbm{ 1 \\ -2 \\ 1 }\\
+    \Longrightarrow& \begin{cases}
+            \lambda_1 &= -7 \lamabda_4 \\
+            \lambda_2 &= -4 \lambda_4  \\
+            \lambda_3 &= \lambda_4
+    \end{cases}
+\end{align*}
+
+Assume $\lambda_4 = 1$, we have $\lambda 3 = 4, \lambda_2 = -4, \lambda_1 = -7$ which is a non zero solution of the system.
+
+
+\section*{Problem 4}
+
+For a vector space of $\mathbb{C}^{2 \times 3}$, we may have an arbitrary matrix like $\qbm{a + bi & e + fi & j + ki \\ c + di & g + hi & l + mi}$ for $a, b, ..., h, j, ..., m \in \mathbb{R}$. So by having a the following system:
+
+\begin{equation*}
+    \underbrace{ \qbm{1 & 0 & 0 \\ 0 & 0 & 0 }, \qbm{0 & 0 & 0 \\ 1 & 0 & 0 }, \cdots, \qbm{0 & 0 & 0 \\ 0 & 0 & 1}}_\text{6 matrices}
+\end{equation*}
+
+We first know they are linearly independent as to have $\lambda_1 \qbm{1 & 0 & 0 \\ 0 & 0 & 0 } +\lambda_2  \qbm{0 & 0 & 0 \\ 1 & 0 & 0 } +  \cdots + \lambda_6 \qbm{0 & 0 & 0 \\ 0 & 0 & 1} = 0$ we must have $\lambda_1 = \lambda_2 = ... = \lambda_6 = 0$.
+
+Then for spanning, by simply assigning the scalar mutipliers of $(a + bi), (c + di), \cdots, (l + mi)$ to these matrices respectively, we shall produce any $\qbm{a + bi & e + fi & j + ki \\ c + di & g + hi & l + mi} \in \mathbb{C}^{2 \times 3}$. Thus, the proposed system is a basis of $\mathbb{C}^{2 \times 3}$.
+
+\section*{Problem 5}
+
+Yes, first we know they are linearly independent as we may only have:
+
+\begin{align*}
+    0 &= \lambda_1 \begin{bmatrix} 1 \\ i \end{bmatrix} + \lambda_2 \begin{bmatrix} 0 \\ 1 \end{bmatrix} \\
+    &= 0 \begin{bmatrix} 1 \\ i \end{bmatrix} + 0 \begin{bmatrix} 0 \\ 1 \end{bmatrix}
+\end{align*}
+where the coefficients $\lambda_1 = \lambda_2 = 0$.
+
+Then to prove they are spanning over $\mathbb{C}^2$, we may have any arbitrary $\begin{bmatrix} a + bi \\ c + di \end{bmatrix}$ for $a, b, c, d \in \mathbb{R}$. This means if we may individually produce $(1, 0), (0, 1), (i, 0), (0, i)$, we shall simply put $a, c, b, d$ as their scalar mutipliers respectively then add them together, we have any possible $\begin{bmatrix} a + bi \\ c + di \end{bmatrix}$.
+
+\begin{align*}
+    \qbm{0 \\ 1} &= \qbm{0 \\ 1} \\
+    \qbm{1 \\ 0} &= \qbm{1 \\ i} - i\qbm{0 \\ 1} \\
+    \qbm{i \\ 0} &= i\qbm{1 \\ i} + \qbm{0 \\ 1} = \qbm{i \\ -1} + \qbm{0 \\ 1} \\
+    \qbm{0 \\ i} &=  i\qbm{0 \\ 1}
+\end{align*}
+
+Thus $\qbm{1 \\ i}, \qbm{0 \\ 1}$ is also spanning $\mathbb{C}^2$ and therefore a basis of it.
 
 \end{document}
 
