🐛 Fix subscript formatting.

--- a/Group_HW03/article.tex
+++ b/Group_HW03/article.tex
@@ -137,7 +137,7 @@ No, it is linearly dependent as we may have:
     \end{cases}
 \end{align*}
 
-Assume $\lambda_4 = 1$, we have $\lambda 3 = 4, \lambda_2 = -4, \lambda_1 = -7$ which is a non zero solution of the system.
+Assume $\lambda_4 = 1$, we have $\lambda_3 = 4, \lambda_2 = -4, \lambda_1 = -7$ which is a non zero solution of the system.
 
 
 \section*{Problem 4}
