--- a/Group_HW04/article.tex
+++ b/Group_HW04/article.tex
@@ -74,7 +74,7 @@ The equality-in-question is therefore shown.
 Known from the above problem, we have the following (note we don't have to specify $Re<x, y>$ here as the problem specified $V$ is a vector space with a real valued inner product, so $Re<x, y> = <x, y>$):
 
 \begin{align*}
-    \norm{x + y}^2 + \norm{x - y}^2 &= \norm{x}^2 + 2<x, y> + \norm{y}^2  - (\norm{x}^2 - 2<x, y> + \norm{y}^2) \\
+    \norm{x + y}^2 - \norm{x - y}^2 &= \norm{x}^2 + 2<x, y> + \norm{y}^2  - (\norm{x}^2 - 2<x, y> + \norm{y}^2) \\
     &= 4<x, y> \\
     \Longrightarrow <x, y> &= \frac{1}{4}(\norm{x + y}^2 + \norm{x - y}^2)
 \end{align*}
