🔨 Update Re part in P3.

--- a/Group_HW04/article.tex
+++ b/Group_HW04/article.tex
@@ -87,12 +87,12 @@ The equality-in-question is therefore shown.
 Known from the above two problem, we have:
 \begin{align*}
     \norm{u + v}^2 &= <u + v, u + v> \\
-    &= \norm{u}^2 + 2<u, v> + \norm{v}^2 = 7^2 \\
+    &= \norm{u}^2 + 2 Re<u, v> + \norm{v}^2 = 7^2 \\
     \norm{u - v}^2 &= <u - v, u - v> \\
-    &= \norm{u}^2 - 2<u, v> + \norm{v}^2 = 3^2 \\
-    \Rightarrow& \ 4<u, v> = 49 - 9 = 40 \\
-    \Longrightarrow& \ <u, v> = 10 \\
-    \Rightarrow& \ 2\norm{u}^2 + 2\norm{v}^2 = 49 + 9 = 58 \\
+    &= \norm{u}^2 - 2 Re<u, v> + \norm{v}^2 = 3^2 \\
+    \Rightarrow <u + v, u + v> &- <u - v, u - v> = 4 Re <u, v> = 49 - 9 = 40 \\
+    \Longrightarrow& \ Re<u, v> = 10 \\
+    \Rightarrow <u + v, u + v> &+ <u - v, u - v> = 2\norm{u}^2 + 2\norm{v}^2 = 49 + 9 = 58 \\
     \Longrightarrow& \ \norm{u}^2 + \norm{v}^2 = 29 \\
 \end{align*}
 
