🐛 Bugfix on sign typo in P2, again.

--- a/Group_HW04/article.tex
+++ b/Group_HW04/article.tex
@@ -76,7 +76,7 @@ Known from the above problem, we have the following (note we don't have to speci
 \begin{align*}
     \norm{x + y}^2 - \norm{x - y}^2 &= \norm{x}^2 + 2<x, y> + \norm{y}^2  - (\norm{x}^2 - 2<x, y> + \norm{y}^2) \\
     &= 4<x, y> \\
-    \Longrightarrow <x, y> &= \frac{1}{4}(\norm{x + y}^2 + \norm{x - y}^2)
+    \Longrightarrow <x, y> &= \frac{1}{4}(\norm{x + y}^2 - \norm{x - y}^2)
 \end{align*}
 
 The equality-in-question is therefore shown.
