🔨 Update to mention about P3 instruction fix.

--- a/Group_HW04/article.tex
+++ b/Group_HW04/article.tex
@@ -98,5 +98,7 @@ Known from the above two problem, we have:
 
 Thus, we have $<u, v> = 10$ and $\norm{u}^2 + \norm{v}^2 = 29$.
 
+(We have been told by the instructor that $V$ is a vector space with a real valued inner product, so $Re<x, y> = <x, y>$.)
+
 \end{document}
 
