🐛 Bugfix on range of n in P1.

--- a/Individual_HW07/article.tex
+++ b/Individual_HW07/article.tex
@@ -65,7 +65,7 @@ $X$ is vector of $[x_1, x_2, \dots, x_n]$. And we know that $<u, v> \leq |u||v|$
     \sum_{i} \len{x_i} &\leq \sqrt{n} \len{X} = \len{X} \len{\sqrt{n}}
 \end{align*}
 
-for all $n > 1$.
+for all $n \geq 1$.
 
 \subsection*{Problem 2}
 \textit{See HW instruction.}\newline
