🐛 Fix typo on finalizing 1dx.

--- a/Individual_HW10/article.tex
+++ b/Individual_HW10/article.tex
@@ -90,7 +90,7 @@
 
 By inspecting the $<f, g>$ of possible combinations, we have $\int_{0}^{1} x^i dx$ for $i \in \{0, 1, 2, 3, 4\}$, which will yield results of $x, \frac{1}{2}x^2, \frac{1}{3}x^3, \frac{1}{4}x^4, \frac{1}{5}x^5$ respectively. It is clear that they are linearly independent as each resultant polynomial has a $x$ of different power and we must have $\lambda_{1}x + \lambda_{2}\frac{1}{2}x^2 + \lambda_{3}\frac{1}{3}x^3 + \lambda_{4}\frac{1}{4}x^4 + \lambda_{5}\frac{1}{5}x^5 = 0$ for all $\lambda = 0$.
 
-Now to show they are not orthogonal, we may simply take an example, say $\int_{0}^{1} 1 dx$, which equals to $x \Big|^1_0 = 1 \neq 0$ and therefore not orthogonal. In fact, all of these inner products are not orthogonal as they will have a result of $1, \frac{1}{2}, \frac{1}{3}, \frac{1}{4}, \frac{1}{5}$ respectively to the abovementioned orders.
+Now to show they are not orthogonal, we may simply take an example, say $\int_{0}^{1} 1 dx$, which equals to $1 \neq 0$ and therefore not orthogonal. In fact, all of these inner products are not orthogonal as they will have a result of $1, \frac{1}{2}, \frac{1}{3}, \frac{1}{4}, \frac{1}{5}$ respectively to the abovementioned orders.
 
 \subsection*{Problem 3}
 \textit{See HW instruction.}\newline
