🐛 Fix typo on P2 matrix E LT check.

--- a/Individual_HW11/article.tex
+++ b/Individual_HW11/article.tex
@@ -95,7 +95,7 @@ It is a linear mapping as it satisfies the following conditions (for $\lambda \i
         $B$ & \xmark & \xmark & \cmark & \xmark & \xmark \\
         $C$ & \xmark & \cmark & \xmark & \xmark & \xmark \\
         $D$ & \xmark & \xmark & \xmark & \cmark & \xmark \\
-        $E$ & \xmark & \xmark & \xcmark & \cmark & \cmark \\
+        $E$ & \xmark & \xmark & \xmark & \cmark & \cmark \\
         $F$ & \xmark & \xmark & \xmark & \xmark & \xmark \\
     \end{tabular}
 \end{table}
