🐛 Fix incorrectly categorizing P2 E as symmatric.

--- a/Individual_HW11/article.tex
+++ b/Individual_HW11/article.tex
@@ -80,7 +80,7 @@ It is a linear mapping as it satisfies the following conditions (for $\lambda \i
     \item $B$ is not diagonal nor upper-triangular, but it is lower triangular. It is neither symmetric nor hermitian.
     \item $C$ is not diagonal not lower-triangular, but it is upper-triangular. It is neither symmetric nor hermitian.
     \item $D$ is not diagonal, not upper- or lower-triangular. It is symmatric but not hermitian as for row two in $D$, it should be equal to $[2, 4, i]$ but it is not.
-    \item $E$ is not diagonal, not upper- or lower-triangular. It is both symmatric and hermitian.
+    \item $E$ is not diagonal, not upper- or lower-triangular. It is hermitian but not symmatric as the elements of $E$ are in $\mathbb{R}$.
     \item $F$ is not a square matrix so it is not diagonal, not upper-, and not lower-triangular. For the same reason it is also not symmatric nor hermitian.
 \end{itemize}
 
@@ -95,7 +95,7 @@ It is a linear mapping as it satisfies the following conditions (for $\lambda \i
         $B$ & \xmark & \xmark & \cmark & \xmark & \xmark \\
         $C$ & \xmark & \cmark & \xmark & \xmark & \xmark \\
         $D$ & \xmark & \xmark & \xmark & \cmark & \xmark \\
-        $E$ & \xmark & \xmark & \xmark & \cmark & \cmark \\
+        $E$ & \xmark & \xmark & \xmark & \xmark & \cmark \\
         $F$ & \xmark & \xmark & \xmark & \xmark & \xmark \\
     \end{tabular}
 \end{table}
