--- a/Group_HW06/article.tex
+++ b/Group_HW06/article.tex
@@ -58,9 +58,34 @@ Shaochen (Henry) ZHONG, Zhitao (Robert) CHEN, John MAYS, Huaijin XIN\\ \ilc{\{sx
 
 \subsection*{Problem 1}
 \textit{See HW instruction.}\newline
+\subsubsection*{Reflection: }
+For a reflection across the y-axis, the x-component of a vector must become -x\\
+$A\begin{pmatrix}x\\ y\end{pmatrix} = \begin{pmatrix}-x\\ y\end{pmatrix}$\\
+If $A = \begin{pmatrix}-1 & 0\\ 0 & 1\end{pmatrix}$, then $A\begin{pmatrix}x\\ y\end{pmatrix}=\begin{pmatrix}-1(x)+0(x)\\ 0(y)+1(y)\end{pmatrix}=\begin{pmatrix}-x\\ y\end{pmatrix}$\\
+Therefore $A$ is the reflection matrix.
+\subsubsection*{Rotation: }
+To obtain the rotation matrix, we can compute the default Cartesian rotation matrix with $\theta = \frac{\pi}{4}$\\
+$B=\begin{pmatrix}\cos{\frac{\pi}{4}} & -\sin{\frac{\pi}{4}}\\ \sin{\frac{\pi}{4}} & \cos{\frac{\pi}{4}}\ \end{pmatrix}=\begin{pmatrix}\frac{1}{\sqrt{2}} & -\frac{1}{\sqrt{2}}\\ \frac{1}{\sqrt{2}} & \frac{1}{\sqrt{2}} \end{pmatrix}$
+Therefore $B$ is the rotation matrix.
+\subsubsection*{Entire Operation:}
+The matrix for the entire operation is the reflection matrix times the rotation matrix,\\
+$AB=\begin{pmatrix}-1 & 0\\ 0 & 1\end{pmatrix}\begin{pmatrix}\frac{1}{\sqrt{2}} & -\frac{1}{\sqrt{2}}\\ \frac{1}{\sqrt{2}} & \frac{1}{\sqrt{2}} \end{pmatrix}=\begin{pmatrix}(-1)(\frac{1}{\sqrt{2}}) +(0)(\frac{1}{\sqrt{2}})& (-1)(-\frac{1}{\sqrt{2}})+(0)(\frac{1}{\sqrt{2}})\\ (0)(\frac{1}{\sqrt{2}}) +(1)(\frac{1}{\sqrt{2}})& (0)(-\frac{1}{\sqrt{2}})+(1)(\frac{1}{\sqrt{2}}) \end{pmatrix}=\begin{pmatrix}-\frac{\sqrt{2}}{2} & -\frac{\sqrt{2}}{2}\\ \frac{\sqrt{2}}{2} & \frac{\sqrt{2}}{2} \end{pmatrix}$
+\pagebreak
 
 \subsection*{Problem 2}
 \textit{See HW instruction.}\newline
+quation in question: $(A+B)^2=A^2+2AB+B^2$ for two square matrices of the same size, $A$ and $B$.
+\subsubsection*{LHS:}
+The $ij$-th entry of $(A+B) $ is $a_{ij}+b_{ij}$\\
+%The $ij$-th of $(A+B)^2$ can be thought of with the matrix-multiplication product of $(A+B)(A+B)$:\\
+The $ij$-th entry of $(A+B)^2 = (A+B)(A+B)$ is $\sum_{k=1}^n (a_{ik}+b_{ik})(a_{kj}+b_{kj})= \sum_{k=1}^n a_{ik}a_{kj}+a_{ik}b_{kj}+b_{ik}a_{kj}+b_{ik}b_{kj}$
+\subsubsection*{RHS:}
+The $ij$-th entry of $A^2$ is $\sum_{k=1}^n a_{ik}a_{kj}$\\
+It follows that the $ij$-th entry of $B^2$ is $\sum_{k=1}^n b_{ik}b_{kj}$\\
+The $ij$-th entry of $AB$ is $\sum_{k=1}^n a_{ik}b_{kj}$\\
+Therefore the $ij$-th entry of $A^2+2AB+B^2$ is $\sum_{k=1}^n a_{ik}a_{kj} + 2a_{ik}b_{kj}+ b_{ik}b_{kj}$
+\subsubsection*{Conclusion:}
+The respective $ij$-th entry of the LHS and the RHS of the equation are not equivalent, therefore $(A+B)^2=A^2+2AB+B^2$ is not true for two square matrices, $A$ and $B,$ of the same size.
 
 \subsection*{Problem 3}
 \textit{See HW instruction.}\newline
